<resources>
    <string name="app_name">Aero Control</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="error_detected">Error ?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="github">Github</string>
    <string name="donation_blechdose">Blechdose</string>
    <string name="donation_quarx">Quarx</string>
    <string name="default_values">Default Values</string>
    <string name="need_reboot">This may require a reboot.</string>
    <string name="unavailable">Unavailable</string>
    <string name="got_it">Got it</string>
    <string name="back_for_close">Press Back again to close the App.</string>
    <string name="define_a_name">Define a name for this profile.</string>
    <string name="add_a_name">Profile name</string>
    <string name="add">Add</string>
    <string name="nothing_added_yet">Whoop! You haven\'t added any profiles yet.</string>
    <string name="not_rooted">No Root?</string>
    <string name="apply">Apply</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reset</string>
    <string name="legal">Legal Notices</string>
    <string name="send_email">Send an Email</string>
    <string name="nocpu_data">Couldn\'t find any CPU data.</string>
    <string name="maybe_later">Maybe later</string>
    <string name="successful">Successful!</string>
    <string name="mVPlus">+25 mV</string>
    <string name="mVMinus">-25 mV</string>
    <string name="perAppAssigned">Per-App: Active</string>
    <string name="notperAppAssigned">Per-App: Not active</string>
    <string name="nogpu_data">Couldn\'t find any GPU related data</string>
    <string name="xda">XDA Thread</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="no_data_found">I couldn\'t find any relevant data :(</string>
    <string name="setonboot_settings"> set-on-boot settings.</string>
    <string name="finishing_settings"> finished settings.</string>
    <string name="minutes">Minutes</string>
    <string name="minute">Minute</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="skip_splash">Skip</string>
    <string name="aero_continue">Continue</string>
    <string name="warning">Warning!</string>
    <string name="average">Ø average</string>
    <string name="module">module</string>
    <string name="usage_time">usage time</string>
    <string name="return_to_normal">Returning to normal usage</string>
    <string name="apply_profile">Applying Per-App Profile: </string>
    <string name="slider_overview">Overview</string>
    <string name="slider_cpu_settings">CPU Performance</string>
    <string name="slider_gpu_settings">GPU Control</string>
    <string name="slider_memory_settings">Memory Tuning</string>
    <string name="slider_defy_parts">Defy Parts</string>
    <string name="slider_backup_restore">Backup/Restore</string>
    <string name="slider_profile">Profiles</string>
    <string name="slider_statistics">CPU Statistics</string>
    <string name="slider_misc_settings">Misc Settings</string>
    <string name="slider_app_monitor">App Monitor</string>
    <string name="slider_testsuite_settings">TestSuite</string>
    <string name="kernel_version">Kernel:</string>
    <string name="current_cpu_speed">CPU Frequency:</string>
    <string name="current_gpu_speed">GPU Frequency:</string>
    <string name="current_governor">Governor:</string>
    <string name="current_io_governor">I/O-Scheduler:</string>
    <string name="available_memory">Total Memory:</string>
    <string name="about">About</string>
    <string name="aero_settings">Settings</string>
    <string name="pref_appspecific">App specific </string>
    <string name="pref_setatboot">Set at Boot</string>
    <string name="pref_setatboot_sum">Caution: This will set your settings at boot.</string>
    <string name="pref_rebootcheck">Random Reboot Checker</string>
    <string name="pref_rebootcheck_sum">It will inform you if your device had a sudden reboot.</string>
    <string name="pref_updatepath">Updatelocation:</string>
    <string name="pref_updatepath_sum">Set your desired update path.</string>
    <string name="pref_app_theme">App Theme</string>
    <string name="pref_app_theme_sum">Defines the default app theme.</string>
    <string name="pref_per_app_service">Per-App Profile Service</string>
    <string name="pref_per_app_service_sum">Enable or disable the per-app profile service.</string>
    <string name="pref_reset_tutorials">Reset Tutorials</string>
    <string name="pref_reset_tutorials_title">There is no way back</string>
    <string name="pref_reset_tutorials_dialog">You are going to reset the tutorials.</string>
    <string name="pref_beta_program">Become a Beta-Tester</string>
    <string name="pref_beta_program_text">If you want, you can become a beta tester. This means you will receive Aero Control updates earlier.\nTo
                        become a beta tester, you need to fulfill two steps:\n\n<ul>
                            <li><b>Join the <a href="https://plus.google.com/communities/117982729981389849140">Google+ Community</a>\n\n</b></li>
                            <li><b>Apply for <a href="https://play.google.com/apps/testing/com.aero.control/join">beta testing</a></b></li>
                        </ul>
                        \n\nKeep in mind that you can always leave the beta channel if you click the second link again.
    </string>
    <string name="pref_lollipop_usage_warning">Please notice that Google changed the way to check for the current foreground app for Lollipop(+). In order to make PerApp Service work on your device, you have to go into settings and enable usage statistics access for Aero Control. You can revoke this right at any point of time. If you are feeling ready, click continue.</string>
    <string name="app_theme_red">Red - Light Holo with red accent</string>
    <string name="app_theme_light">Light - Light Holo with blue accent</string>
    <string name="app_theme_dark">Dark - Light Holo with blue accent and black action bar</string>
    <string name="pref_boot_delay">Boot Timer Delay</string>
    <string name="pref_boot_delay_dialog">Delay in minutes</string>
    <string name="pref_perapp_monitor">Per-App Monitor</string>
    <string name="pref_perapp_toasts">Per-App Toasts</string>
    <string name="about_dialog">Hello. Thank you for using this App. My name is
                        Alexander Christ (Blechd0se) and I have written this App for fun and in my spare time.
                        Its also Open Source, so you can grab the Source Code and modify it as you want.
                        If you want to, you can either donate to Quarx for his awesome rom or to me.
                        <b>The joy of living is in the giving.</b>
    </string>
    <string name="legal_dialog">This App is licensed under the Apache license. A copy of this can be downloaded here:\n
                            <b>http://www.apache.org/licenses/LICENSE-2.0</b>\n
                        ShowCase Library by Alex Curran is licensed under the Apache 2.0 License.\n
                        HoloGraph Library by Daniel Nadeau is licensed under the Apache 2.0 License.

    </string>
    <string name="root_required">It looks like your device is not rooted. This app won\'t work correctly without root.
                                If you think this is a mistake, please let me know and send me an email!</string>
    <string name="pref_cpu_freq">Frequencies</string>
    <string name="pref_cpu_freqmax">Max. Frequency</string>
    <string name="pref_cpu_freqmin">Min. Frequency</string>
    <string name="pref_big_cpu_freqmax">Max. Frequency (big)</string>
    <string name="pref_big_cpu_freqmin">Min. Frequency (big)</string>
    <string name="pref_cpu_governor">Governor Settings</string>
    <string name="perf_live_oc_uc">Live OC/UC</string>
    <string name="perf_live_oc_uc_sum">Control Frequencies and Voltage in realtime!</string>
    <string name="pref_gov_choose">Governor Settings</string>
    <string name="pref_gov_choose_sum">This will set your favorite governor!</string>
    <string name="pref_gov_set">Governor Specific Settings</string>
    <string name="pref_gov_set_sum">Set the governor Specific settings here.</string>
    <string name="pref_gov_set_no_parameter">Looks like there are no parameter for this governor?</string>
    <string name="perf_cpu_hotplug">Hotplug Settings</string>
    <string name="perf_cpu_hotplug_driver">Hotplug Driver</string>
    <string name="perf_cpu_hotplug_sum">Adjust the hotplug driver here</string>
    <string name="perf_voltage_control">Voltage Control</string>
    <string name="perf_voltage_control_sum">Adjust the voltage of your cpu here</string>
    <string name="perf_cpu_boost_control">CPU Boost</string>
    <string name="pref_memory_settings">Memory Settings</string>
    <string name="pref_memory_zcache">zCache</string>
    <string name="pref_memory_zcache_sum">zCache uses CPU-time for a slightly better memory managment.</string>
    <string name="pref_low_mem_option">Low Memory Option</string>
    <string name="pref_low_mem_option_sum">Enable or Disable the low memory option here. This might help on devices with 4.4+ (Kitkat).</string>
    <string name="pref_fstrim">Trim Option</string>
    <string name="pref_fstrim_sum">Trim several parts of your system! This might take a while.</string>
    <string name="pref_dalvik_setttings">VM Settings</string>
    <string name="pref_dalvik_setttings_sum">Change parameters of the virtual machine.</string>
    <string name="io_scheduler">IO Scheduler</string>
    <string name="pref_gpu_control_enable">GPU Control</string>
    <string name="pref_gpu_control_enable_sum">This will enable the GPU Control driver. It handles overclocking/undervolting as well
                                            as some basic scheduling for the GPU.</string>
    <string name="pref_gpu_max_freq">Max. Frequency</string>
    <string name="pref_gpu_max_freq_sum">This will set the maximum GPU Frequency. Default is 200 MHz.</string>
    <string name="pref_display_color">Display Color</string>
    <string name="pref_display_color_sum">Adjust the display color here.</string>
    <string name="pref_sweeptowake">Sweep2Wake</string>
    <string name="pref_sweeptowake_sum">May drain your battery a bit more than usual.</string>
    <string name="perf_gpu_gov_settings">GPU Governor Settings</string>
    <string name="perf_gpu_gov_settings_sum">Tweak the governor parameters of your gpu.</string>
    <string name="pref_updater">Kernel Updater and Backup</string>
    <string name="pref_backup_kernel">Backup your Kernel</string>
    <string name="pref_backup_kernel_sum">This will save a copy of your current kernel.</string>
    <string name="pref_updater_kernel">Update Kernel</string>
    <string name="pref_updater_kernel_sum">This will update your kernel.</string>
    <string name="pref_restore">Restore Backup</string>
    <string name="pref_restore_kernel">Restore</string>
    <string name="pref_restore_kernel_sum">Restore from a kernel backup.</string>
    <string name="pref_general_settings_defy">General Settings</string>
    <string name="pref_charging_led">Charging LED Color</string>
    <string name="pref_charging_led_sum">Color of your LED while charging</string>
    <string name="pref_button_brightness">Button Brightness</string>
    <string name="pref_button_brightness_sum">Change the button brightness here.</string>
    <string name="pref_multitouch">Multitouch-Points</string>
    <string name="pref_multitouch_sum">Number of multitouch points.</string>
    <string name="pref_profile_showSystem">System Apps</string>
</resources>