
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/pref_appspecific">

        <CheckBoxPreference
            android:key="reboot_checker"
            android:title="@string/pref_rebootcheck"
            android:summary="@string/pref_rebootcheck_sum" />

        <CheckBoxPreference
            android:key="per_app_service"
            android:title="@string/pref_per_app_service"
            android:summary="@string/pref_per_app_service_sum" />

        <CheckBoxPreference
            android:key="per_app_monitor"
            android:title="Per App Monitor"
            android:summary="Enable or disable the AppMonitor." />

        <ListPreference
            android:key="boot_delay"
            android:title="@string/pref_boot_delay"
            android:dialogTitle="@string/pref_boot_delay_dialog"
            android:entries="@array/boot_delay"
            android:entryValues="@array/boot_delay" />

        <Preference
            android:key="reset_tutorials"
            android:title="@string/pref_reset_tutorials"
            android:summary="" />

        <Preference
            android:key="beta"
            android:title="@string/pref_beta_program" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_name">

        <Preference
            android:key="version"
            android:title="Version"/>

        <Preference
            android:key="google+"
            android:title="Google+" />

        <Preference
            android:key="xda_thread"
            android:title="@string/xda"/>

        <Preference
            android:key="legal"
            android:title="@string/legal"/>

        <Preference
            android:key="about"
            android:title="@string/about"/>

    </PreferenceCategory>


</PreferenceScreen>