<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_gpu_control_enable"
        android:key="gpu_settings">

        <CheckBoxPreference
            android:key="gpu_control_enable"
            android:title="@string/pref_gpu_control_enable"
            android:summary="@string/pref_gpu_control_enable_sum" />

        <CheckBoxPreference
            android:key="sweeptowake"
            android:title="@string/pref_sweeptowake"
            android:summary="@string/pref_sweeptowake_sum" />

        <ListPreference
            android:key="gpu_max_freq"
            android:title="@string/pref_gpu_max_freq"
            android:summary="@string/pref_gpu_max_freq_sum" />

        <Preference
            android:key="gpu_gov_settings"
            android:title="@string/perf_gpu_gov_settings"
            android:summary="@string/perf_gpu_gov_settings_sum" />

        <ListPreference
            android:key="display_control"
            android:title="@string/pref_display_color"
            android:summary="@string/pref_display_color_sum" />
    </PreferenceCategory>

</PreferenceScreen>