<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_memory_settings"
        android:key="memory_settings">

        <CheckBoxPreference
            android:key="zcache"
            android:title="@string/pref_memory_zcache"
            android:summary="@string/pref_memory_zcache_sum"
            android:dialogTitle="@string/pref_memory_zcache" />

        <CheckBoxPreference
            android:key="low_mem"
            android:title="@string/pref_low_mem_option"
            android:summary="@string/pref_low_mem_option_sum"
            android:dialogTitle="@string/pref_low_mem_option" />

        <com.aero.control.helpers.Android.CustomPreference
            android:key="fstrim_toggle"
            android:title="@string/pref_fstrim"
            android:summary="@string/pref_fstrim_sum" />

        <com.aero.control.helpers.Android.CustomPreference
            android:key="dalvik_settings"
            android:title="@string/pref_dalvik_setttings"
            android:summary="@string/pref_dalvik_setttings_sum" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/io_scheduler"
        android:key="io_scheduler_parameter" >

    </PreferenceCategory>

</PreferenceScreen>