<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_cpu_freq"
        android:key="cpu_settings">

        <com.aero.control.helpers.CustomPreference
            android:key="cpu_commands"
            android:title="@string/perf_live_oc_uc"
            android:summary="@string/perf_live_oc_uc_sum"
            android:inputType="number" />

        <Preference
            android:key="hotplug_control"
            android:title="@string/perf_cpu_hotplug"
            android:summary="@string/perf_cpu_hotplug_sum" />

        <com.aero.control.helpers.CustomPreference
            android:key="voltage_values"
            android:title="@string/perf_voltage_control"
            android:summary="@string/perf_voltage_control_sum" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cpu_governor"
        android:key="cpu_governor">

    </PreferenceCategory>

</PreferenceScreen>