<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/pref_general_settings_defy">

        <ListPreference
            android:key="led_charging"
            android:title="@string/pref_charging_led"
            android:summary="@string/pref_charging_led_sum"/>

        <EditTextPreference
            android:key="button_brightness"
            android:title="@string/pref_button_brightness"
            android:summary="@string/pref_button_brightness_sum"
            android:inputType="number"/>

        <ListPreference
            android:key="multi_touch"
            android:title="@string/pref_multitouch"
            android:summary="@string/pref_multitouch_sum" />
    </PreferenceCategory>

</PreferenceScreen>