<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res/com.aero.control"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey">

    <LinearLayout
        android:id="@+id/topLevel"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/actionbar_card">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usageTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="17dp"
                android:paddingTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:visibility="gone"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:textSize="22sp"
                    android:textColor="@color/white"/>


                <TextView
                    android:id="@+id/topHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    android:text="@string/average"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topModuleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:textSize="22sp"
                    android:textColor="@color/white"/>


                <TextView
                    android:id="@+id/topModule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    android:text="@string/module"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/reset_stats"
                    fab:fab_colorNormal="#F44336"
                    fab:fab_title="@string/reload"
                    fab:fab_icon="@drawable/ic_refresh"
                    fab:fab_colorPressed="#C62828"/>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <com.db.chart.view.LineChartView
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/card_rect"
        android:layout_below="@+id/topLevel"
        android:id="@+id/graph"/>

    <HorizontalScrollView
        android:id="@+id/horizontalscreen"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/graph"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layouthorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

    </HorizontalScrollView>
</RelativeLayout>